--- a/PackageTrackingSystemAndroid/app/src/main/res/layout/activity_main.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,42 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_width="158dp"
+        android:layout_height="wrap_content"
+        android:text="@string/scan"
+        android:id="@+id/button_scan"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.08"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="15dp"
+        android:background="#2780e3"
+        />
 
-</RelativeLayout>
+    <Button
+        android:layout_width="158dp"
+        android:layout_height="wrap_content"
+        android:text="@string/status"
+        android:id="@+id/button_account_info"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.08"
+        android:layout_marginBottom="15dp"
+        android:background="#3fb618"
+        />
+
+    <Button
+        android:layout_width="158dp"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        android:id="@+id/button_logout"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.08"
+        android:layout_marginBottom="15dp"
+        android:background="#ff7518"
+        />
+
+</LinearLayout>
