--- a/PackageTrackingSystemAndroid/app/src/main/res/layout/activity_my_status.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/layout/activity_my_status.xml
@@ -6,7 +6,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.pciesiol.packagetrackingsystemandroid.MyStatusActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/packagesListView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:clickable="true" />
 </RelativeLayout>
